kubernetes/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin
        ports:
        - containerPort: 8096
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 1000
          runAsGroup: 1000
        volumeMounts:
        - name: transcoding-temp
          mountPath: "/config/transcoding-temp"
        - name: cache
          mountPath: "/cache"
        - name: config
          mountPath: "/config"
        - name: music
          mountPath: "/media/music"
        - name: movies
          mountPath: "/media/movies"
        - name: tv
          mountPath: "/media/tv"
        - name: anime
          mountPath: "/media/anime"
      volumes:
      - name: transcoding-temp
        emptyDir: {}
      - name: cache
        persistentVolumeClaim:
          claimName: jellyfin-cache
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: music
        persistentVolumeClaim:
          claimName: music
      - name: movies
        persistentVolumeClaim:
          claimName: movies
      - name: tv
        persistentVolumeClaim:
          claimName: tv
      - name: anime
        persistentVolumeClaim:
          claimName: anime
