kubernetes/jellyfin/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jellyfin.kurz.site`)
    kind: Rule
    services:
    - name: jellyfin
      port: 8096
  tls:
    certResolver: letsencrypt
